k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskorbit
  labels:
    name: taskorbit
    app: taskorbit
